tests/paczka1/fuzzy1/27886874.err
Error in line 1: JebxsjR A622 17,2
Error in line 21: x3Rrynu1eng A622 39,1
